# GraphAttack

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/decoupling/: CMakeLists.txt  Makefile
libs/decoupling/include/: dec_decoupling.h
libs/decoupling/src/: maple_decoupling.cpp  shmem_decoupling.cpp
passes/: CMakeLists.txt
passes/AlwaysInliner/: AlwaysInliner.cpp
passes/ClangVisitor/: CMakeLists.txt  DECVisitor.cpp
passes/DecoupleCommon/: Decouple.h
passes/DecoupleCompute/: DecoupleCompute.cpp
passes/DecoupleSupply/: DecoupleSupply.cpp  DecoupleSupplyAddr.cpp
passes/FindNMA/: CMakeLists.txt  FindNMA.cpp  FindNMA.cpp~  Makefile  cmake_install.cmake
utils/: DECpp.py
utils/DECLib/: CMakeLists.txt  DECADES.h  DECADES_decoupled.h
utils/DecoupleServer/: CMakeLists.txt  produce_consume.cpp  produce_consume_maple.cpp
utils/KernelProfiler/: CMakeLists.txt
